[package]
name = "transliterate1234"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["transliteration", "transliterate", "ascii", "unicode", "character"]
readme = "README.md"
repository = "https://github.com/thooton/transliterate1234/"
description = "UTF-8 to ASCII transliteration"
categories = ["internationalization", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
